# lair

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake  LairOptions.cmake
code/client/: cl_commands.cpp  cl_main.cpp  client.h  main.cpp
code/client-qt/: main.cpp
code/client-tui/: main.cpp  tui.cpp  tui.h
code/lcommon/: cmd.cpp  cmd.h  common.cpp  l_shared.h  lcommon.cpp  lcommon.h  msg.cpp  msg.h  platform.h  types.h
code/posix/: net_posix.cpp  sys_posix.cpp
code/server/: CMakeLists.txt  main.cpp  server.h  sv_main.cpp
code/ui/qt/: main_window.cpp
core/: CMakeLists.txt
core/include/lair/: types.h
docs/: PROJECT_LAYOUT.md
include/lair/: README.md
src/ui/qt/: main_window.hpp
